--- a/gradle/androidLibs.versions.toml
+++ b/gradle/androidLibs.versions.toml
@@ -2,9 +2,13 @@
 activity = "1.6.1"
 material = "1.8.0"
 lifecycle = "2.5.1"
+navigation = "2.5.3"
+compose = "1.3.1"
 
 [libraries]
 activity = { module = "androidx.activity:activity-compose", version.ref = "activity" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 lifecycleViewModel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 lifecycleRuntime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
+navigation = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
+composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
