--- a/gradle/androidLibs.versions.toml
+++ b/gradle/androidLibs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 activity = "1.6.1"
-material = "1.8.0"
 lifecycle = "2.5.1"
 navigation = "2.5.3"
 compose = "1.3.1"
@@ -12,3 +11,4 @@ lifecycleRuntime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", versio
 navigation = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
 composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 material = { module = "androidx.compose.material:material", version.ref = "compose" }
+runtimeLiveData = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "compose" }
