--- a/gradle/androidLibs.versions.toml
+++ b/gradle/androidLibs.versions.toml
@@ -3,6 +3,10 @@ activity = "1.6.1"
 lifecycle = "2.5.1"
 navigation = "2.5.3"
 compose = "1.3.1"
+poolingContainer = "1.0.0"
+hiltNavigation = "1.0.0"
+paging = "1.3.2"
+hilt = "2.44.2"
 
 [libraries]
 activity = { module = "androidx.activity:activity-compose", version.ref = "activity" }
@@ -12,3 +16,11 @@ navigation = { module = "androidx.navigation:navigation-compose", version.ref = 
 composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 material = { module = "androidx.compose.material:material", version.ref = "compose" }
 runtimeLiveData = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "compose" }
+tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
+toolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
+uiTestJunit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
+poolingContainer = { module = "androidx.customview:customview-poolingcontainer", version.ref = "poolingContainer" }
+hiltNavigation = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigation" }
+paging = { module = "androidx.paging:paging-compose", version.ref = "paging" }
+hiltAndroid = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hiltCompiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
