--- a/gradle/networkingLibs.versions.toml
+++ b/gradle/networkingLibs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 retrofit = "2.9.0"
 moshi = "1.14.0"
+chucker = "3.5.2"
 
 [libraries]
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
@@ -8,3 +9,5 @@ retrofitConverter = { module = "com.squareup.retrofit2:converter-moshi", version
 moshi = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
 moshiKapt = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi" }
 moshiAdapters = { module = "com.squareup.moshi:moshi-adapters", version.ref = "moshi" }
+chucker = { module = "com.github.chuckerteam.chucker:library", version.ref = "chucker" }
+chuckerNoOp = { module = "com.github.chuckerteam.chucker:library-no-op", version.ref = "chucker" }
