--- a/gradle/networkingLibs.versions.toml
+++ b/gradle/networkingLibs.versions.toml
@@ -1,11 +1,14 @@
 [versions]
 retrofit = "2.9.0"
+okHttp = "4.10.0"
 moshi = "1.14.0"
 chucker = "3.5.2"
 
 [libraries]
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofitConverter = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
+okHttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
+loggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp" }
 moshi = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
 moshiKapt = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi" }
 moshiAdapters = { module = "com.squareup.moshi:moshi-adapters", version.ref = "moshi" }
