--- a/gradle/androidLibs.versions.toml
+++ b/gradle/androidLibs.versions.toml
@@ -5,7 +5,7 @@ navigation = "2.5.3"
 compose = "1.3.1"
 poolingContainer = "1.0.0"
 hiltNavigation = "1.0.0"
-paging = "1.3.2"
+paging = "1.0.0-alpha17"
 hilt = "2.44.2"
 
 [libraries]
