--- a/gradle/androidLibs.versions.toml
+++ b/gradle/androidLibs.versions.toml
@@ -24,3 +24,4 @@ hiltNavigation = { module = "androidx.hilt:hilt-navigation-compose", version.ref
 paging = { module = "androidx.paging:paging-compose", version.ref = "paging" }
 hiltAndroid = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hiltCompiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+hiltPlugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt"}
