--- a/gradle/androidLibs.versions.toml
+++ b/gradle/androidLibs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-activity = "1.6.1"
-lifecycle = "2.5.1"
-navigation = "2.5.3"
-compose = "1.3.1"
+activity = "1.7.2"
+lifecycle = "2.6.1"
+navigation = "2.7.1"
+compose = "1.5.0"
 poolingContainer = "1.0.0"
 hiltNavigation = "1.0.0"
-paging = "1.0.0-alpha17"
-hilt = "2.44.2"
+paging = "3.2.0"
+hilt = "2.45"
 
 [libraries]
 activity = { module = "androidx.activity:activity-compose", version.ref = "activity" }
