--- a/gradle/androidLibs.versions.toml
+++ b/gradle/androidLibs.versions.toml
@@ -3,6 +3,7 @@ activity = "1.8.0"
 lifecycle = "2.6.2"
 navigation = "2.7.4"
 compose = "1.5.3"
+composeMaterial = "1.1.2"
 material = "1.10.0"
 poolingContainer = "1.0.0"
 hiltNavigation = "1.0.0"
@@ -15,7 +16,7 @@ lifecycleViewModel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", ve
 lifecycleRuntime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 navigation = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
 composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-materialCompose = { module = "androidx.compose.material:material", version.ref = "compose" }
+materialCompose = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial" }
 runtimeLiveData = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "compose" }
 tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 toolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
