--- a/gradle/testLibs.versions.toml
+++ b/gradle/testLibs.versions.toml
@@ -6,6 +6,7 @@ mockk = "1.13.5"
 coroutines = "1.7.3"
 testCore = "1.5.0"
 archCoreTesting = "2.2.0"
+hamcrest = "2.2"
 
 [libraries]
 espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
@@ -15,4 +16,4 @@ mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 coroutinesTest = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 testCore = { module = "androidx.test:core-ktx", version.ref = "testCore" }
 archCoreTesting = { module = "androidx.arch.core:core-testing", version.ref = "archCoreTesting" }
-
+hamcrest = { module = "org.hamcrest:hamcrest", version.ref = "hamcrest" }
